bugs on scss correction

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,7 +22,7 @@ a.card-wrapper {
 
     .card-category {
       opacity: .8;
-      border: 2px solid $mr_primary;
+      border: 2px solid;
     }
   }
 }
