--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Cocktail</h1>
 
-<%= render 'form', cocktail: @cocktail %>
+<h1>New cocktail</h1>
 
-<%= link_to 'Back', cocktails_path %>
+<%= simple_form_for @cocktail do |f| %>
+
+  <%= f.input :name %>
+
+  <%= link_to 'Cancel', cocktails_path, class: 'btn btn-secondary' %> or
+  <%= f.submit class: 'btn btn-primary' %>
+<% end %>
